[package]
name = "mdview"
version = "0.1.0"
edition = "2024"

[dependencies]
tao = "0.33"
wry = "0.51"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
notify = "7"
winreg = "0.55"
open = "5"

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
